Première migration BDD + Page Liste Vin + details vin

--- a/winecellar/wines/base.html
+++ b/winecellar/wines/base.html
@@ -8,7 +8,7 @@
     <body>
 
     <nav>
-        <a href="">Accueil</a>
+        <a href="{% url 'hello' %}">Accueil</a>
         <a href="">A Propos</a>
         <a href="">Mentions légales</a>
         <a href="">Nous Contacter</a>
