CRUD Region Viticoles + Caves Virtuelles

--- a/winecellar/wines/cave_delete.html
+++ b/winecellar/wines/cave_delete.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<h1>Supprimer le vin</h1>
+<h1>Supprimer la cave virtuelle</h1>
 
-<p>Etes-vous sûr de vouloir supprimer le vin : {{ vin.nom }} {{ vin.millesime }} ?</p>
+<p>Etes-vous sûr de vouloir supprimer la cave virtuelle : {{ cave.nom }} ?</p>
 
 <form action="" method="post">
 {% csrf_token %}
