--- a/winecellar/wines/hello.html
+++ b/winecellar/wines/hello.html
@@ -5,6 +5,8 @@
 
 <p>On est super heureux de vous voir :)</p>
 
-<p><a href="{% url 'vin-list' %}">Descendre a ma cave</a></p>
+<p><a href="{% url 'cave-list' %}">Mes caves</a></p>
+
+<p><a href="{% url 'region-list' %}">Gestion des régions viticoles</a></p>
 
 {% endblock %}
