--- a/winecellar/wines/region_update.html
+++ b/winecellar/wines/region_update.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>Mise à jour du vin</h1>
+<h1>Mise à jour de la région</h1>
 
   <form action="" method="post">
     {% csrf_token %}
