--- a/winecellar/wines/cave_details.html
+++ b/winecellar/wines/cave_details.html
@@ -1,7 +1,8 @@
 {% extends 'wines/base.html' %}
 
 {% block content %}
-<h1> Bienvenue dans votre Cave ! </h1>
+
+<h1> Bienvenue dans votre Cave {{ cave.nom|upper }} ! </h1>
 
 <ul>
    {% for vin in vins %}
@@ -12,6 +13,6 @@
 
 
 <button><a href="{% url 'vin-create' %}">Ajouter un vin</a></button>
+<button><a href="{% url 'cave-delete' cave.id %}">Supprimer cette cave</a></button>
 
 {% endblock %}
-
