--- a/winecellar/wines/cave_update.html
+++ b/winecellar/wines/cave_update.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>Mise à jour du vin</h1>
+<h1>Mise à jour de la cave virtuelle</h1>
 
   <form action="" method="post">
     {% csrf_token %}
