Ajout CRUD Cepage + Filtre Multiple Vin dans Cave Virtuelle

--- a/winecellar/wines/hello.html
+++ b/winecellar/wines/hello.html
@@ -8,5 +8,6 @@
 <p><a href="{% url 'cave-list' %}">Mes caves</a></p>
 
 <p><a href="{% url 'region-list' %}">Gestion des régions viticoles</a></p>
+<p><a href="{% url 'cepage-list' %}">Gestion des cepages</a></p>
 
 {% endblock %}
