--- a/winecellar/wines/cave_details.html
+++ b/winecellar/wines/cave_details.html
@@ -4,11 +4,18 @@
 
 <h1> Bienvenue dans votre Cave {{ cave.nom|upper }} ! </h1>
 
+<form method="get">
+    {{ form.as_p }}
+    <button type="submit">Rechercher</button>
+</form>
+
 <ul>
-   {% for vin in vins %}
-     <li><a href="{% url 'vin-details' vin.id %}">{{ vin.nom }}</a>
-     <a href="{% url 'vin-update' vin.id %}">[modifier]</a></li>
-   {% endfor %}
+    {% for vin in vins %}
+        <li><a href="{% url 'vin-details' vin.id %}">{{ vin.nom }}</a>
+            <a href="{% url 'vin-update' vin.id %}">[modifier]</a></li>
+    {% empty %}
+        <li>Aucun vin trouvé.</li>
+    {% endfor %}
 </ul>
 
 
