--- a/winecellar/wines/hello.html
+++ b/winecellar/wines/hello.html
@@ -7,6 +7,8 @@
 
 <p><a href="{% url 'cave-list' %}">Mes caves</a></p>
 
+<p><a href="{% url 'carte-france' %}">Carte des vins</a></p>
+
 <p><a href="{% url 'region-list' %}">Gestion des régions viticoles</a></p>
 <p><a href="{% url 'cepage-list' %}">Gestion des cepages</a></p>
 
