--- a/winecellar/wines/cave_list.html
+++ b/winecellar/wines/cave_list.html
@@ -5,10 +5,16 @@
 <h1> Mes caves </h1>
 
 <ul>
-   {% for cave in caves %}
-     <li><a href="{% url 'cave-details' cave.id %}">{{ cave.nom }}</a>
-     <a href="{% url 'cave-update' cave.id %}">[modifier]</a></li>
-   {% endfor %}
+    {% for cave in caves %}
+    {% if cave.id_user == request.user %}
+    <li><a href="{% url 'cave-details' cave.id %}">{{ cave.nom }}</a>
+        <a href="{% url 'cave-update' cave.id %}">[modifier]</a></li>
+    {% endif %}
+    {% endfor %}
+
+<!--    <p> Vous n'avez pas encore de cave virtuelle !</p>-->
+
+
 </ul>
 
 
