--- a/winecellar/wines/admin_page.html
+++ b/winecellar/wines/admin_page.html
@@ -4,6 +4,8 @@
 
 <h1> Admin Page </h1>
 
+<p><a href="{% url 'user-list' %}">Gestion des utilisateurs</a></p>
+
 <p><a href="{% url 'evenement-list' %}">Gestion des evenements</a></p>
 <p><a href="{% url 'region-list' %}">Gestion des régions viticoles</a></p>
 <p><a href="{% url 'cepage-list' %}">Gestion des cepages</a></p>
