--- a/winecellar/wines/base.html
+++ b/winecellar/wines/base.html
@@ -3,25 +3,48 @@
 <html>
 <head>
     <title>Wines</title>
-    <link rel="stylesheet" href="{% static 'wines/styles.css' %}"/>
+    {% load bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+    <link rel="stylesheet" href="{% static '/css/main.css' %}">
 </head>
 <body>
 
-<nav>
-    <a href="{% url 'hello' %}">Accueil</a>
-    {% if user.is_authenticated %}
-    <a href="{% url 'update-user' request.user.id %}">Mon Profil</a>
-    {% endif %}
-    <a href="">A Propos</a>
-    <a href="">Mentions légales</a>
-    <a href="">Nous Contacter</a>
-    {% if user.is_authenticated and user.role == 'ADMIN' %}
-    <a href="{% url 'admin-page' %}">Admin</a>
-    {% endif %}
+<nav class="navbar navbar-light" style="background-color: #e5f7f9;">
 
-    {% if user.is_authenticated %}
-    <a href="{% url 'logout' %}">Se déconnecter</a>
-    {% endif %}
+        <ul class="navbar-nav flex-row">
+            <li class="nav-item">
+                <a href="{% url 'hello' %}">Accueil</a>
+            </li>
+            {% if user.is_authenticated %}
+            <li class="nav-item ">
+                <a href="{% url 'update-user' request.user.id %}">Mon Profil</a>
+            </li>
+            {% endif %}
+            <li class="nav-item">
+                <a href="">A Propos</a>
+            </li>
+            <li class="nav-item">
+                <a href="">Mentions légales</a>
+            </li>
+            <li class="nav-item">
+                <a href="">Nous Contacter</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav flex-row">
+
+            {% if user.is_authenticated and user.role == 'ADMIN' %}
+            <li class="nav-item">
+                <a href="{% url 'admin-page' %}">Admin</a>
+            </li>
+            {% endif %}
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a href="{% url 'logout' %}">Se déconnecter</a>
+            </li>
+            {% endif %}
+        </ul>
+
 </nav>
 
 {% if user.is_authenticated %}
@@ -29,6 +52,50 @@
 {% endif %}
 
 {% block content %}{% endblock %}
+
+<div class="d-flex flex-column h-100">
+
+
+    <!-- FOOTER -->
+    <footer class="w-100 py-4 flex-shrink-0">
+        <div class="container py-4">
+            <div class="row gy-4 gx-5">
+                <div class="col-lg-4 col-md-6">
+                    <h5 class="h1 text-white">FB.</h5>
+                    <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                </div>
+                <div class="col-lg-2 col-md-6">
+                    <h5 class="text-white mb-3">Quick links</h5>
+                    <ul class="list-unstyled text-muted">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Get started</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 col-md-6">
+                    <h5 class="text-white mb-3">Quick links</h5>
+                    <ul class="list-unstyled text-muted">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Get started</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <h5 class="text-white mb-3">Newsletter</h5>
+                    <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                    <form action="#">
+                        <div class="input-group mb-3">
+                            <input class="form-control" type="text" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+                            <button class="btn btn-primary" id="button-addon2" type="button"><i class="fas fa-paper-plane"></i></button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </footer>
+</div>
 
 </body>
 </html>
